--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
   <div id="app"></div>
-  <script src="./side-nav/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
